--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,11 @@ body{
     margin: 0px
 }
 
+hr{
+    /* height: 5px; */
+    height:3px;border:none;border-top:1px double #f0f0f0;
+}
+
 #nav_top{
     width: 100%;
     height: 48px;
