--- a/css/main.css
+++ b/css/main.css
@@ -92,3 +92,16 @@ hr{
     margin-top: 10px;
     margin-left: 10px;
 }
+
+#smallLogo{
+    float: left;
+}
+
+#smallLogo h3{
+    line-height: 20px;
+    vertical-align: middle;
+    margin-left: 12px;
+    display: inline-block;
+    font-size: 16px;
+    color: #333;
+}
